--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,32 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE resources [
+    <!ENTITY adb_permission_command "">
+]>
 <resources>
     <string name="app_name">Grayscale Switcher</string>
     <string name="app_tag">GraySwitcher</string>
     <string name="update_message_template">Grayscale mode was %s now %s</string>
+    <string name="permission_tip_title">Can\'t run without a granted permission</string>
+    <string name="permission_tip_intro">
+        The application currently doesn\'t have a permission to write secure settings,
+        in particular we need \"Simulate color space\" option in \"Developer options\"
+    </string>
+    <string name="permission_tip_solution">
+        A solution is to turn on \"Developer options\" on your phone (Google how)
+        and to give the app the aforementioned permission by either:\n
+        — unlocking ROOT rights or\n
+        — connecting via USB to a PC which has ADB tool and executing in a terminal:
+    </string>
+    <string name="adb_label">adb command</string>
+    <string name="adb_permission_command">
+        adb shell pm grant com.laralex.grayswitcher android.permission.WRITE_SECURE_SETTINGS
+    </string>
+    <string name="adb_command_copied">ADB command was copied</string>
+    <string name="permission_tip_guarantees">
+        If you\'re worried of giving such permission to us,
+        check out our open source code, which proofs,
+        that we DO NOT do any stuff on your phone except for switching of the grayscale setting
+    </string>
+    <string name="copy_button">Copy ADB command</string>
+    <string name="close_button">Close</string>
 </resources>
